--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Laverca REST MSS client</name>
   <build>
-    <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -50,11 +49,6 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.5.13</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-jdk14</artifactId>
-      <version>1.7.30</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
@@ -152,6 +146,21 @@
       <artifactId>dss-crl-parser-x509crl</artifactId>
       <version>5.5</version>
     </dependency>
+	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi</artifactId>
+		<version>5.0.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-ooxml</artifactId>
+		<version>5.0.0</version>
+	</dependency>
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>1.1.7</version>
+	</dependency>
   </dependencies>
   
 </project>
