--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,15 @@
 		<artifactId>logback-classic</artifactId>
 		<version>1.1.7</version>
 	</dependency>
+	
+    <!-- test -->
+    <dependency>
+       <groupId>org.junit.jupiter</groupId>
+       <artifactId>junit-jupiter-engine</artifactId>
+       <version>5.3.1</version>
+       <scope>test</scope>
+    </dependency>
+	
   </dependencies>
   
 </project>
